--- a/ArkanoidGame/ArkanoidGame.vcxproj.filters
+++ b/ArkanoidGame/ArkanoidGame.vcxproj.filters
@@ -67,6 +67,12 @@
     <ClCompile Include="IDelayedAction.h">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="BlockFactory.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="LevelLoader.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -130,6 +136,15 @@
       <Filter>Sources</Filter>
     </ClInclude>
     <ClInclude Include="randomizer.h">
+      <Filter>Sources</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockFactory.h">
+      <Filter>Sources</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelLoader.h">
+      <Filter>Sources</Filter>
+    </ClInclude>
+    <ClInclude Include="IObserver.h">
       <Filter>Sources</Filter>
     </ClInclude>
   </ItemGroup>
